--- a/conveyor.conf
+++ b/conveyor.conf
@@ -11,8 +11,17 @@ include required("https://raw.githubusercontent.com/hydraulic-software/conveyor/
 
 // Config file documentation: https://conveyor.hydraulic.dev/latest/configs
 app {
-  // The base URL is where the download site will be placed. Packages will check here for updates.
-  site.base-url = "localhost:3000"
+  //Reference to the GitHub repository where the project is hosted.
+  vcs-url = "github.com/SeerBird/TurtleSmash"
+  site {    
+    github {
+      // Token looks like "github_pat_SOME_TOKEN_VALUE"
+      oauth-token = "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"
+
+      // Optional: upload the download site to a branch. 
+      //pages-branch = "gh-pages"
+    }
+  }
 
   // This is optional. If not specified the last component of the rdns name will be turned into a display name.
   display-name = "TurtleSmash"
