Developing job structure
Figuring out connection

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -16,10 +16,10 @@ app {
   site {    
     github {
       // Token looks like "github_pat_SOME_TOKEN_VALUE"
-      oauth-token = "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"
+      oauth-token = "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"
 
       // Optional: upload the download site to a branch. 
-      //pages-branch = "gh-pages"
+      pages-branch = "gh-pages"
     }
   }
 
