--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 kotlin.version=1.7.10
 compose.version=1.2.0
 kotlin.mpp.stability.nowarn=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
