UDP broadcast didn't work out
Gonna try multicasting now. For some reason UDP broadcast only seems to show up on the device that is broadcasting.

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -16,7 +16,7 @@ app {
   site {    
     github {
       // Token looks like "github_pat_SOME_TOKEN_VALUE"
-      oauth-token = "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"
+      oauth-token = "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"
 
       // Optional: upload the download site to a branch. 
       pages-branch = "gh-pages"
@@ -34,5 +34,6 @@ app {
   // To try it out just delete this line. For more info see https://conveyor.hydraulic.dev/latest/configs/#icons
   icons = "icons/icon.svg"
 }
+app.windows.console=true
 
 conveyor.compatibility-level = 8
