ehhhhhhh confusion with conveyor and github

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -13,13 +13,14 @@ include required("https://raw.githubusercontent.com/hydraulic-software/conveyor/
 app {
   //Reference to the GitHub repository where the project is hosted.
   vcs-url = "github.com/SeerBird/TurtleSmash"
-  site {    
+  site {
     github {
       // Token looks like "github_pat_SOME_TOKEN_VALUE"
       oauth-token = "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"
 
-      // Optional: upload the download site to a branch. 
+      // Optional: upload the download site to a branch.
       pages-branch = "gh-pages"
+      base-url="github.com/SeerBird/TurtleSmash/releases/latest/download"
     }
   }
   // This is optional. If not specified the last component of the rdns name will be turned into a display name.
@@ -36,4 +37,4 @@ app {
 }
 app.windows.console=true
 
-conveyor.compatibility-level = 9
+conveyor.compatibility-level = 12
